replace angular-ui-router with ngRoute

--- a/package.json
+++ b/package.json
@@ -107,8 +107,8 @@
     "configFile": "jspm.conf.js",
     "dependencies": {
       "angular": "github:angular/bower-angular@^1.5.5",
+      "angular-route": "github:angular/bower-angular-route@^1.5.5",
       "angular-ui-calendar": "github:angular-ui/ui-calendar@^1.0.1",
-      "angular-ui-router": "github:angular-ui/ui-router@^0.2.18",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
       "font-awesome": "npm:font-awesome@^4.6.1",
       "fullcalendar": "npm:fullcalendar@^2.7.0-beta",
