--- a/package.json
+++ b/package.json
@@ -107,10 +107,12 @@
     "configFile": "jspm.conf.js",
     "dependencies": {
       "angular": "github:angular/bower-angular@^1.5.5",
+      "angular-bootstrap-datetimepicker": "npm:angular-bootstrap-datetimepicker@^1.0.1",
       "angular-route": "github:angular/bower-angular-route@^1.5.5",
       "angular-ui-calendar": "github:angular-ui/ui-calendar@^1.0.1",
       "boostrap-datetimepicker": "github:Eonasdan/bootstrap-datetimepicker@^4.17.37",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
+      "bootstrap-datepicker": "github:Eonasdan/bootstrap-datetimepicker@^4.17.37",
       "font-awesome": "npm:font-awesome@^4.6.1",
       "fullcalendar": "npm:fullcalendar@^2.7.0-beta",
       "jquery": "npm:jquery@^2.2.3",
